--- a/app/views/top50_machines/app_form_step1.html.slim
+++ b/app/views/top50_machines/app_form_step1.html.slim
@@ -45,8 +45,7 @@ div class="col-8" id="form-new_machine"
         br
         = f.text_field :name, label: "Официальное название системы", value: get_cur(:name)
         = f.text_field :name_eng, label: "Название системы (на английском языке)", value: get_cur(:name_eng)
- 
-        = f.number_field :installation_date, label: "Год установки вычислительной системы (*)", in: 1990...2022 , value: get_cur(:installation_date)
+        = f.number_field :installation_date, label: "Год установки вычислительной системы (*)", min: 1990, max: Date.current.year, value: get_cur(:installation_date)
         br
         = f.text_field :website, label: "Веб-сайт с информацией о системе", value: get_cur(:website)
 
