Add system modification graph

--- a/app/views/top50_machines/admin_links.html.slim
+++ b/app/views/top50_machines/admin_links.html.slim
@@ -34,3 +34,15 @@ p
   = link_to "Регионы", top50_regions_path
 p
   = link_to "Страны", top50_countries_path
+
+h3 Удаление дубликатов
+br
+p
+  = link_to "Системы", "/duplicates/machines"
+p
+  = "Вендоры"
+p
+  = "Организации"
+p
+  = "Пользователи"
+
