--- a/app/views/top50_machines/get_machine_duplicates.html.slim
+++ b/app/views/top50_machines/get_machine_duplicates.html.slim
@@ -1,5 +1,7 @@
 h1
   = "Таблица модификаций систем, разбитых по сходству"
+h3
+  | На одной строке расположены модификации одной и той же системы исходя из данных, поданных пользователями
 div align="center"
 
     - @clusters.each do |root, cluster|
@@ -7,7 +9,7 @@ div align="center"
         - next
       table width="740" class="table duplicate_table"
       table class="table duplicate_table"
-        center  
+        center
           tr align="left"
             - max_chain = get_max_branch_size(cluster)
             - for i in 1..@max_chain
@@ -26,8 +28,8 @@ div align="center"
                 - classname = "tr-new-m"
             tr class="info" align="left"
               - branch.each do |machine|
-                
-                td 
+
+                td
                   div class="colored_line title_cell_line"
                     = "Номер: %d" % machine.id
                   div class="colored_line"
@@ -45,9 +47,9 @@ div align="center"
                     = "Состояние: #{format_valid_flag(machine)}"
                   div class="colored_line dark_cell_line"
                     li
-                      = link_to "Удалить систему", "/duplicates/delete_modification_node/%d" % [machine.id]
+                      = link_to "Удалить систему",   delete_modification_node_path(machine.id), method: :delete
 table width="740" class="table duplicate_table"
-  center  
+  center
     h1
       = "Системы, не имеющие схожих "
     tr
@@ -56,8 +58,8 @@ table width="740" class="table duplicate_table"
     - @single_clusters_branches.each do |branch|
       tr class="info"
         - branch.each do |machine|
-                
-          td 
+
+          td
             div class="colored_line title_cell_line"
               = "Номер: %d" % machine.id
             div class="colored_line"
@@ -75,4 +77,4 @@ table width="740" class="table duplicate_table"
               = "Состояние: #{format_valid_flag(machine)}"
             div class="colored_line dark_cell_line"
               li
-                = link_to "Удалить систему", "/duplicates/delete_modification_node/%d" % [machine.id]
+                = link_to "Удалить систему",  delete_modification_node_path(machine.id), method: :delete
